# EmpiricalDynamics

./: .gitignore  CHANGELOG.md  LISCENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
EmpiricalDynamics.egg-info/: PKG-INFO  SOURCES.txt
diagrams/: class_diagram.drawio
docs/source/: conf.py  index.rst  src.edynamics.modelling_tools.embeddings.rst  src.edynamics.modelling_tools.estimators.rst  src.edynamics.modelling_tools.kernels.rst  src.edynamics.modelling_tools.norms.rst  src.edynamics.modelling_tools.projectors.rst  src.edynamics.rst  src.rst  tests.rst  tests.unit.modelling_tools.embeddings.rst  tests.unit.modelling_tools.estimators.rst  tests.unit.modelling_tools.rst  tests.unit.rst
edynamics.egg-info/: PKG-INFO
edynamics/modelling_tools/: unit_tests.py
edynamics/modelling_tools/blocks/: Block.py
edynamics/modelling_tools/models/: Model.py
examples/: local_gl_iterative_bootstrap_demo.py  wls_lorenz_demo.py
report/: report.html
sketches/: README.md
src/: __init__.py
src/edynamics/: __init__.py
src/edynamics.egg-info/: PKG-INFO  SOURCES.txt
src/edynamics/data_sets/: lorenz.py
tests/: __init__.py  conftest.py  test_dimensionality.py  test_embedding.py  test_greedy_nearest_neighbour.py  test_k_nearest_neighbours.py  test_kernels.py  test_local_gl_selector.py  test_norms.py  test_observers.py  test_smoke_imports.py  test_weighted_least_squares.py
tests/modelling_tools/: conftest.py
tests/report/: report.html
tests/utils/: __init__.py  plot_utils.py
(+49 files in other folders)
